--- a/Phoenix/Libraries/RendererOpenGL.vcxproj
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="..\RendererOpenGL\App\DefferedShading.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\ForwardLighting.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\main.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\PBR.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\Physics.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\Systems\LightingSystem.cpp" />
     <ClCompile Include="..\RendererOpenGL\Quaternion.cpp" />
@@ -70,6 +71,8 @@
     <None Include="..\RendererOpenGL\App\Resources\Shaders\mesh.vert" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\model.frag" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\model.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\pbr.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\pbr.vert" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_debug.frag" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_debug.vert" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_depth.frag" />
