--- a/Phoenix/Libraries/RendererOpenGL.vcxproj
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_impl_sdl.cpp" />
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\Animation.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\Boids.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\Components\LightComponent.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\Components\ModelComponent.cpp" />
     <ClCompile Include="..\RendererOpenGL\App\DefferedShading.cpp" />
@@ -92,7 +93,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{A8AE2307-ED3C-4108-9FD8-618E8020EFEC}</ProjectGuid>
     <RootNamespace>RendererOpenGL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -111,7 +112,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
